--- a/VRChat/19/1293819.html
+++ b/VRChat/19/1293819.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9M7UOMjTdVO40mvyvFu87ELJhmwoLFMVy3B/zkR8yDo="></script>
+    "/Gt9j3MgrKYZPnUFzNsulXG9q8yn/C4ikq5gRvUcDaQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"犬子屋【ショートデニムパンツ(肌テクスチャ)】VRoid\u0026セシル変身","description":"【利用契約および設定方法】\n※ご購入前にお読みください。\n\nこの商品は【ショートデニムパンツ】単品販売です。\n\n【コート】【ショートデニム】【ベルトブーツ】とその他がセットになった商品もございます。\nhttps://isekaiinuko.booth.pm/items/1293789\n単品での購入よりもお得なセットになっていますので、ご購入の際はこちらをご検討ください。\nまた、返金などの対応はいたしかねます。\nくれぐれも【重複購入】にはお気つけください。\n\n『VRoid　設定方法』\n体系編集\n肌のテクスチャ。\n＋ボタンを押して新規にレイヤーを作成。\nレイヤー←Sデニム\nレイヤー←フィンガーレスグローブ\nレイヤー←ニーハイソックス\nにそれぞれインポート。\n操作を間違えた場合はCtrl+Zキーで一つ前にやり直しができます。\n\n『セシル変身　設定方法』\nUserData\n↓\nTexture\n↓\nUserの順番に展開。\n↓\n適用したいファイルをコピーして置き換え。\n↓\nセシル変身側ワンピースまたは素体選択時『肌/影』の項目を左から２番目の【U】に選択したのち『設定』の項目より『ユーザーテクスチャ読み込み』で適用させてください。\nなおセシル変身用には一部仕様が異なります。\nあらかじめご了承ください。\n\n【購入した商品の利用は自由です】\n『再配布』することは禁止ですが、それ以外の制限はとくにございません。\nVRoid制作はもちろん。\nUnity経由でVRchatへ。\nセシル変身用に使ったり。\n変換してMMDやその他への流用。\nゲーム制作や改変しての使用などなど。\nご自由にお使いください！\nなおクレジット表記は任意で大丈夫です。\n気にせずお使いください！\n\nあなたの理想を形に。\n『犬子屋』はVRoid活動を応援しています。\n\nそれとツイートの際は是非\n#犬子屋 と書いてツイートしください。\n拝見させていただきます！","url":"https://booth.pm/ja/items/1293819","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"300","highPrice":"900"},"image":"https://booth.pximg.net/c/620x620/f22bc1b2-b53f-45cb-ab46-6930cde3bab7/i/1293819/f82948ce-9738-4850-833d-0ef0e3a4bdbc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9M7UOMjTdVO40mvyvFu87ELJhmwoLFMVy3B/zkR8yDo="></script>
+    nonce="/Gt9j3MgrKYZPnUFzNsulXG9q8yn/C4ikq5gRvUcDaQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1293819/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1293819/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
