--- a/VRChat/61/1293761.html
+++ b/VRChat/61/1293761.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cbrytXh6SSkhVYvlbEsGOeXv324Ybgl0V5XxGc+d/5w="></script>
+    "O72usRVeHACMPrAeE5WsLO69afitScb995b78+rb3Ik="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GuildBoard","description":"VRC用の掲示板システムです。\n\n●以下が含まれます。\n・URL設定したPanoramaのプレファブ\n・スプレッドシートから画像に変換するグーグルスクリプト\n\n●以下の機能は含まれません\n・それ以外\n\n●使い方\nたぶんワールドにプレファブおいたら使える。","url":"https://booth.pm/ja/items/1293761","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/55e0ade6-1a8a-42bf-b4f4-91cc5bdbb5ca/i/1293761/a27414ad-7c41-4592-b144-2232b1c5552d_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cbrytXh6SSkhVYvlbEsGOeXv324Ybgl0V5XxGc+d/5w="></script>
+    nonce="O72usRVeHACMPrAeE5WsLO69afitScb995b78+rb3Ik="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,10 +158,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1293761/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              108
+                              109
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1293761/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              108
+                              109
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
