--- a/VRChat/40/1293040.html
+++ b/VRChat/40/1293040.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "R0g5XjYqCiy2kVMAGae5/FpFYWx39B3SWaRp21Xtv3o="></script>
+    "4CKt6Hlvi8WTCXH+OxRkZoVjc7143R4jTxC3b+75uDw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【太刀】童子切安綱 (PBR/4K)","description":"あの酒呑童子を切ったという伝説を持つ日本の国宝童子切安綱。\n一千年の時を超えてもなおその切れ味は未だ鈍らないとか。\nそんな様々な逸話を持つ太刀を3Dモデルで再現しました!\n拵は安土桃山時代のものになります。","url":"https://booth.pm/ja/items/1293040","offers":{"priceCurrency":"JPY","@type":"Offer","price":"440"},"image":"https://booth.pximg.net/c/620x620/5e3688dc-a990-4181-9d0b-7698aa7c892e/i/1293040/84dbe935-b71d-447e-b84e-18e1172a156f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="R0g5XjYqCiy2kVMAGae5/FpFYWx39B3SWaRp21Xtv3o="></script>
+    nonce="4CKt6Hlvi8WTCXH+OxRkZoVjc7143R4jTxC3b+75uDw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1293040/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               315
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1293040/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               315
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
