--- a/VRChat/03/1292103.html
+++ b/VRChat/03/1292103.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "feWDSkvWBS9KktqPAF6Xvn/xcXLAizsSWiwZnlv19zM="></script>
+    "YL2Qph+W95u7EW3WEd/sC9rXqg9xM1UmyueCTvGUDNU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRoidモデル用テクスチャ「バスタオル」","description":"VRoidモデル用のバスタオルです。オーソドックスなピンクとブルーのデザインとなってます。VRChatの温泉やお風呂ワールドでご利用してもらえたらと作りました。テクスチャは素体(女子)用となってますのでそちらにインポートしてご利用ください。 ※追加で別カラーも更新予定ですので是非随時チェックしてお気に入りのカラーをＤＬしてください。\n","url":"https://booth.pm/ja/items/1292103","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/9adc43f5-dd1f-4ea5-b3e1-6fca0f66c5b8/i/1292103/1264d7bb-542b-49fc-bf72-b55423e00d55_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="feWDSkvWBS9KktqPAF6Xvn/xcXLAizsSWiwZnlv19zM="></script>
+    nonce="YL2Qph+W95u7EW3WEd/sC9rXqg9xM1UmyueCTvGUDNU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1292103/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               61
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1292103/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               61
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
